fixed social media spacing

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -35,7 +35,6 @@
   display: flex;
   justify-content: space-between;
   padding-left: 4%;
-  width: 6%;
 }
 
 .social-media-item a {
